--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 <body>
     <!--Шапка-->
     <header>
-        <a href="./index.html" class="logo">WebStudio</a>
+        <a href="./index.html" class="logo">Web<span class="second-logo">Studio</span></a>
 
         <nav>
             <ul class="site-nav">
-                <li><a href="" class="link">Студия</a></li>
-                <li><a href="" class="link">Портфолио</a></li>
+                <li><a href="" class="link current">Студия</a></li>
+                <li><a href="./portfolio.html" class="link">Портфолио</a></li>
                 <li><a href="" class="link">Контакты</a></li>
             </ul>
         </nav>
@@ -111,7 +111,7 @@
     </main>
 <!--Футер-->
     <footer>
-        <a href="./index.html" class="logo">WebStudio</a>
+        <a href="./index.html" class="logo">Web<span class="second-logo">Studio</span></a>
         <address>
             <ul class="address">
                 <li><a href="г. Киев, пр-т Леси Украинки, 26" class="link">г. Киев, пр-т Леси Украинки, 26</br></a></li>
