добавляє класи другої сторінки

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <!--Шапка-->
-    <header>
+    <header class="header">
         <a href="./index.html" class="logo">Web<span class="second-logo">Studio</span></a>
 
         <nav>
@@ -83,8 +83,8 @@
             </ul>
         </section>
         <!--Наша оманда-->
-        <section class="section">
-            <h2 class="section-title">Наша команда</h2>
+        <section class="team">
+            <h2 class="team-title">Наша команда</h2>
             <ul class="peoples">
                 <li>
                     <img src="./images/our team/igor demyanenko.jpg" alt="игорь демьяненко" width="270" />
