--- a/portfolio.html
+++ b/portfolio.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Портфолио</title>
+    <link rel="stylesheet" href="css/styles.css">
     </head>
 <body>
     <!--Шапка-->
-    <header>
+    <header class="header">
         <a href="./index.html" class="logo">Web<span class="second-logo">Studio</span></a>
     
         <nav>
@@ -26,77 +27,77 @@
     </header>
     <!--наши проекты-->
     <main>
-        <section>
-            <h1>Наши проекты</h1>
+        <section class="section">
+            <h1 class="section-title">Наши проекты</h1>
             <!--фильтр-->
-            <ul>
-                <li><button type="button">Все</button>
-                <li><button type="button">Веб-сайты</button>
-                <li><button type="button">Приложения</button>
-                <li><button type="button">Дизайн</button>
-                <li><button type="button">Маркетинг</button>                  
+            <ul class="filter">
+                <li><button type="button" class="portfolio-button">Все</button>
+                <li><button type="button" class="portfolio-button">Веб-сайты</button>
+                <li><button type="button" class="portfolio-button">Приложения</button>
+                <li><button type="button" class="portfolio-button">Дизайн</button>
+                <li><button type="button" class="portfolio-button">Маркетинг</button>                  
             </ul>
             <ul>
-                <li>
+                <li class="services">
                     <a>
                         <img src="./images/portfolio/Technokryak.jpg" alt="" width="">
-                        <h2>Технокряк</h2>
+                        <h2 class="services-title">Технокряк</h2>
                         <p>Веб-сайт</p>
                     </a>
                 </li>
-                <li>
+                <li class="services">
                     <a>
                         <img src="./images/portfolio/New Orlean vs Golden Star poster.jpg" alt="" width="">
-                        <h2>Постер New Orlean vs Golden Star</h2>                   
+                        <h2 class="services-title">Постер New Orlean vs Golden Star</h2>                   
                         <p>Дизайн</p>
                     </a>
                 </li>
-                <li>
+                <li class="services">
                     <a>
                         <img src="./images/portfolio/Seafood Restaurant.jpg" alt="" width="">
-                        <h2>Ресторан Seafood</h2>                       
+                        <h2 class="services-title">Ресторан Seafood</h2>                       
                         <p>Приложение</p>
                     </a>
                 </li>
-                <li>
+                <li class="services">
                     <a>
                         <img src="./images/portfolio/Prime Project.jpg" alt="" width="">
-                        <h2>Проект Prime</h2>                       
+                        <h2 class="services-title">Проект Prime</h2>                       
                         <p>Маркетинг</p>
                     </a>
                 </li>
-                <li>
+                <li class="services">
                     <a>
                         <img src="./images/portfolio/Boxes project.jpg" alt="" width="">
-                        <h2>Проект Boxes</h2>                       
+                        <h2 class="services-title">Проект Boxes</h2>                       
                         <p>Приложение</p>
                     </a>
                 </li>
-                <li>
+                <li class="services">
                     <a>
                         <img src="./images/portfolio/Inspiration has no Borders.jpg" alt="" width="">
-                        <h2>Inspiration has no Borders</h2>                       
+                        <h2 class="services-title">Inspiration has no Borders</h2>                       
                         <p>Веб-сайт</p>
                     </a>
                 </li>
-                <li>
+                <li class="services">
                     <a>
                         <img src="./images/portfolio/Limited Edition.jpg" alt="" width="">
-                        <h2>Издание Limited Edition</h2>                       
+                        <h2 class="services-title">Издание Limited Edition</h2>                       
                         <p>Дизайн</p>
                     </a>
                 </li>
-                <li>
+                <li class="services">
                     <a>
                         <img src="./images/portfolio/LAB project.jpg" alt="" width="">
-                        <h2>Проект LAB</h2>                       
+                        <h2 class="services-title">Проект LAB</h2>                       
                         <p>Маркетинг</p>
                     </a>
                 </li>
-                <li>
+                <li class="services">
                     <a>
                         <img src="./images/portfolio/Growing Business.jpg" alt="" width="">
-                        <h2>Growing Business</h2>                       
+                        <h2 class="services-title">Growing Business</h2>                       
                         <p>Приложение</p>
                     </a>
                 </li>
