шрифты портфолио доделка

--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Портфолио</title>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
     </head>
 <body>
@@ -37,6 +39,7 @@
                 <li><button type="button" class="portfolio-button">Дизайн</button>
                 <li><button type="button" class="portfolio-button">Маркетинг</button>                  
             </ul>
+            <!--меню-->
             <ul>
                 <li class="services">
                     <a>
