--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <main>
         <div>
             <section class="hero">
-                <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+                <h1 class="hero-title">ЭФФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА</h1>
                 <button type="button" class="button">Заказать услугу</button>
             </section>
         </div>
@@ -39,24 +39,24 @@
         <section class="section">
             <ul class="description">
                 <li>
-                    <h3 class="title">Внимание к деталям</h3>
+                    <h3 class="title">ВНИМАНЕ К ДЕТАЛЯМ</h3>
                     <p>
                         Идейные соображения, а также начало повседневной работы по формированию позиции.
                     </p>
                 </li>
                 <li>
-                    <h3 class="title">Пунктуальность</h3>
+                    <h3 class="title">ПУНКТУАЛЬНОСТЬ</h3>
                     <p>
                         Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
                 <li>
-                    <h3 class="title">Планирование</h3>
+                    <h3 class="title">ПЛАНИРОВАНИЕ</h3>
                     <p>
                         Равным образом консультация с широким активом в значительной степени обуславливает.
                     </p>
                 </li>
                 <li>
-                    <h3 class="title">Современные технологии</h3>
+                    <h3 class="title">СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h3>
                     <p>
                         Идейные соображения, а также начало повседневной работы по формированию позиции.
                     </p>
@@ -112,7 +112,7 @@
         </section>
     </main>
 <!--Футер-->
-    <footer>
+    <footer class="footer">
         <a href="./index.html" class="logo">Web<span class="second-logo">Studio</span></a>
         <address>
             <ul class="address">
