--- a/portfolio.html
+++ b/portfolio.html
@@ -108,7 +108,7 @@
         </section>
     </main>
  <!--Футер-->  
-    <footer>
+    <footer class="footer">
         <a href="./index.html" class="logo">Web<span class="second-logo">Studio</span></a>
         <address>
             <ul class="address">
